Tue Aug 31 23:24:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcalendar.c (gtk_calendar_main_button): Only start  
	a drag if the left button is pressed.  (#151490, Frederic Croszat)

Tue Aug 31 23:20:58 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk/x11/gdkdnd-x11.c (gdk_drop_finish): Remove debug spew.

Tue Aug 31 17:07:41 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c
	(gtk_tree_view_column_cell_process_action): constrain cell area to
	passed in cell_area, #147867

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_get_size): if
	ellipsizing, get_size is only 3 chars wide.

	* docs/tree-column-sizing.png: Add Matthias's excellent image.

2004-08-28  Robert Ögren  <gtk@roboros.com>

	On Win32, do not produce tablet motion or button events while a
	window is being moved or resized. (#151090, reported by Shaneyfelt)

	* gdk/win32/gdkprivate-win32.h
	* gdk/win32/gdkglobals-win32.c
	* gdk/win32/gdkevents-win32.c: Rename the variable resizing to
	_sizemove_in_progress and make it extern.

	* gdk/win32/gdkinput-win32.c (_gdk_input_other_event): Ignore
	motion and button events if _sizemove_in_progress is true.

2004-08-30  Tor Lillqvist  <tml@iki.fi>

	Make the ms-windows theme engine build with mingw.

	* configure.in: Expand also modules/engines/ms-windows/Theme/
	Makefile and .../Theme/gtk-2.0/Makefile.

	* modules/engines/ms-windows/Makefile.am: Adapt for building
	inside the GTK sources.

	* modules/engines/ms-windows/*.c: Use "foo.h" style includes for
	GTK and GDK headers. Use correct path for gdkwin32.h header.

	* modules/engines/ms-windows/msw_style.c: Don't use deprecated GDK
	API.

	* modules/engines/ms-windows/xp_theme_defs.h
	* modules/engines/ms-windows/xp_theme.c: Move definitions of TMT_*
	to xp_theme.c, as they are neither in mingw's nor Platform
	SDK's tmschema.h.

	* modules/engines/ms-windows/xp_theme.c: Define _WIN32_WINNT as
	0x0501 to get the necesssary stuff from mingw's uxtheme.h.
