@@ -1,3 +1,8 @@
+Tue Aug 31 23:40:29 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk/win32/gdkproperty-win32.c (gdk_screen_get_setting): Make
+	"ms-windows" the default theme on Win32.  
+
 Tue Aug 31 23:24:49 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkcalendar.c (gtk_calendar_main_button): Only start  
